--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     
     <script src="three.js"></script>
     <script src="orbitControls.js"></script>
+    <script src="MTLLoader.js"></script>
+    <script src="OBJLoader.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
