--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>City</title>
 </head>
-<body style="margin: 0;">
+<body style="margin: 0; overflow: hidden;">
 
     <div id="renderDiv"></div>
     
