--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body style="margin: 0; overflow: hidden;">
+    <div id="mainChart">
+        <canvas id="myChart"></canvas>
+    </div>
+    
     <div id="menu">
         <button>simulate</button>
     </div>
     <div id="renderDiv"></div>
     
     <script src="three.js"></script>
+    <script src="charts.js"></script>
     <script src="orbitControls.js"></script>
     <script src="MTLLoader.js"></script>
     <script src="OBJLoader.js"></script>
