--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <canvas id="myChart"></canvas>
     </div>
     
-    <div id="menu">
+    <!-- <div id="menu">
         <button>simulate</button>
-    </div>
+    </div> -->
     <div id="renderDiv"></div>
     
     <script src="three.js"></script>
