--- a/index.html
+++ b/index.html
@@ -9,6 +9,47 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body style="margin: 0; overflow: hidden;">
+    <div id="configs">
+        <div id="menus">
+            <div id="menu1">
+               <div id="basinConfigs">
+                    River lenght (Km):
+                    <input id="l" type="number" value="21.5">
+                    <br>
+                    Max diference of height on the river (m):
+                    <input id="h" type="number" value="220">
+                    <br>
+                    Hydrographic basin area (Km2):
+                    <input id="a" type="number" value="71800000">
+                    <br>
+                    River base flow rate (m3/s):
+                    <input id="v" type="number" value="100">
+                    <br>
+                    Effective precipitation (mm):
+                    <input id="pe" type="number" value="1">
+                    <br>
+                    Surface runoff:
+                    <input id="n" type="number" value="73">
+               </div>
+              
+            </div>
+            <div id="menu2">
+                <div id="hydroConfigs">
+                    Hydroeletric efficiency:
+                    <input id="e" type="number" value="0.95">
+                    <br>
+                    Max diference of height on the river (m):
+                    <input id="d" type="number" value="200">
+                    <br>
+                    Porcentage of the flow used in the turbines:
+                    <input id="r" type="number" value="0.15">
+                </div>
+            </div>
+            <div id="menu3" onclick="calculateFlow()"></div>
+        </div>
+    </div>
+
+
     <div id="mainChart">
         <canvas id="myChart"></canvas>
     </div>
