--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
                     Max diference of height on the river (m):
                     <input id="d" type="number" value="100">
                     <br>
-                    Porcentage of the flow used in the turbines:
+                    Percentage of the flow used in the turbines:
                     <input id="r" type="number" value="0.015">
                 </div>
             </div>
             <div id="menu3" class="fas fa-cloud-rain" style="font-size: 30px; text-align: center;" >
-                <div id="rainConfigs">
+                <div id="waterConfigs">
+                        Percentage of the flow used to produce water:
+                        <input id="w" type="number" value="0.02">
+                        <br>
                         Effective precipitation (mm):
                         <input id="pe" type="number" value="1">
                         <br>
@@ -53,7 +56,12 @@
                         <input id="n" type="number" value="73">
                 </div>
             </div>
-            <div id="menu4" onclick="calculateFlow()"></div>
+            <div id="menu4">
+                    <div id="rainConfigs">
+                        <canvas id="rainGraph"></canvas>
+                    </div>
+            </div>
+            <div id="menu5" onclick="calculateFlow()"></div>
         </div>
     </div>
 
