--- a/index.html
+++ b/index.html
@@ -59,6 +59,19 @@
             <div id="menu4">
                     <div id="rainConfigs">
                         <canvas id="rainGraph"></canvas>
+                        <input id="jan" value="100">
+                        <input id="feb" value="150">
+                        <input id="mar" value="250">
+                        <input id="apr" value="350">
+                        <input id="may" value="350">
+                        <input id="jun" value="420">
+                        <input id="jul" value="410">
+                        <input id="aug" value="220">
+                        <input id="sep" value="100">
+                        <input id="oct" value="50">
+                        <input id="nov" value="20">
+                        <input id="dec" value="50">
+                        
                     </div>
             </div>
             <div id="menu5" onclick="calculateFlow()"></div>
