--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
                         <br>
                         Surface runoff:
                         <input id="n" type="number" value="73">
+
+                        <canvas id="effectiveGraph"></canvas>
                 </div>
             </div>
             <div id="menu4">
                     <div id="rainConfigs">
+                        <!-- <p id="rainTitle" style="text-align: center">Effective Rain</p> -->
                         <canvas id="rainGraph"></canvas>
                         <input id="jan" value="100">
                         <input id="feb" value="150">
