--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <canvas id="popChart"></canvas>
                 </div>
             </div>
-            <div id="applyBt" onclick="calculateData()"></div>
+            <div id="applyBt" onclick="calculateData()" class="fas fa-check" style="font-size: 30px; text-align: center;" ></div>
         </div>
     </div>
 
