--- a/simulation/index.html
+++ b/simulation/index.html
@@ -23,7 +23,7 @@
                     <br>
                     <input id="h" type="number" value="220">
                     <br>
-                    Hydrographic basin area (Km2):
+                    Drainage basin area (Km2):
                     <br>
                     <input id="a" type="number" value="71.8">
                     <br>
