--- a/documentation/index.html
+++ b/documentation/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>City Resources</title>
 
-
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=AM_CHTML' async></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body style="overflow-x:hidden;">
@@ -83,7 +83,14 @@
             <p>"The Soil Conservation Service proposed the development of a synthetic unit hydrograph from<br>
                     an admission, requiring only the determination of the peak flow and the time in which it<br>
                     occurs".<a href="http://www.deha.ufc.br/ticiana/Arquivos/Graduacao/Apostila_Hidrologia_grad/Cap_8_Escoamento_Superficial.pdf">[1]</a></p>
-
+            <br>
+            <p>Concentration time (ct)</p>
+            <p>     It is the time interval counted from the beginning of the precipitation so that the whole basin<br>
+                    shall contribute to the study section. Corresponds to the duration of the trajectory<br>
+                    of the particle of water that takes longer to reach the section.</p>
+            <p>`ct = 57*(L^3/H)^0.385`</p>
+            <p>Where L = The lenght of the river<br>
+            and <br>H = The area of de drainage basin</p>
         </div>
         
         <div id="references">
@@ -96,6 +103,12 @@
     </div>
     
 
-
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            asciimath2jax: {
+              delimiters: [['`','`'], ['$','$']]
+            }
+          });
+    </script>
 </body>
 </html>
