--- a/simulation/index.html
+++ b/simulation/index.html
@@ -128,7 +128,7 @@
                     <canvas id="finalChart"></canvas>
                 </div>
             </div>
-            <div id="applyBt" onclick="calculateData()" class="fas fa-check" style="font-size: 30px; text-align: center;" ></div>
+            <div id="applyBt" onclick="calculateData()" class="fas fa-check" style="font-size: 30px; text-align: center;" data-toggle="tooltip" title="Apply/Simulate"></div>
         </div>
     </div>
 
