--- a/documentation/index.html
+++ b/documentation/index.html
@@ -27,6 +27,7 @@
                 </ul>
             </li>
             <li><a href="#relation">The Relation</a></li>
+            <li><a href="#thanks">Thanks to</a></li>
             <li><a href="#references">References</a></li>
         </ul>
         
@@ -272,6 +273,12 @@
             <p>In the next chart is shown the monthly balance of energy produced and consumed,<br> and how much water was taken from the river. Based on that we can predict droughts and blackouts in the city.</p>
             <img id="basinMenu" src="report.png">
             <p style="font-size: 15px;">Chart 5 - Final report</p>
+        </div>
+        <div id="thanks">
+            <p style="font-size: 40px;">A huge thanks to the creators of the lib that were used: <br>
+                Three.js - <a href="https://threejs.org/">https://threejs.org/</a><br>
+                Chart.js - <a href="https://www.chartjs.org/">https://www.chartjs.org/</a><br>
+                MathJax -  <a href="https://www.mathjax.org/">https://www.mathjax.org/</a></p>
         </div>
         
         <div id="references">
