--- a/documentation/index.html
+++ b/documentation/index.html
@@ -275,7 +275,7 @@
             <p style="font-size: 15px;">Chart 5 - Final report</p>
         </div>
         <div id="thanks">
-            <p style="font-size: 40px;">A huge thanks to the creators of the lib that were used: <br>
+            <p style="font-size: 40px;">A huge thanks to the creators of the libs that were used: <br>
                 Three.js - <a href="https://threejs.org/">https://threejs.org/</a><br>
                 Chart.js - <a href="https://www.chartjs.org/">https://www.chartjs.org/</a><br>
                 MathJax -  <a href="https://www.mathjax.org/">https://www.mathjax.org/</a></p>
