--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Laparoscopic-Trainer</title>
+    <title>City Resources</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <p id="title">Laparoscopic Trainer Software</p>
-
-    <a id="lesson1" href = "./lesson-1/index.html" target = "_self">Lesson 1</a>
-    <a id="lesson2" href = "./lesson-2/index.html" target = "_self">Lesson 2</a>
-
-    <p id="warning">This is a placeholder website</p>
+<body >
+    <div >    
+        <p id="title" style="font-size: 50px; margin-left: 40%">City Resources</p>
+        <img src="documentation/house2.png" style="margin-left: 30%; margin-right: auto; width: 500px; height: 300px;">
+        <p id="sub" style="text-align: center;font-size: 30px;">This is a project that simulates how the production of water and<br> energy of a city changes based on rain regime.</p>
+        <a class="bt" href="documentation/index.html" style="margin-left: 40%; font-size: 20px;">Documentation</a>
+        <a class="bt" href="simulation/index.html" style="margin-left: 20px;  font-size: 20px;">Simulation</a>
+    </div>
 </body>
 </html>
