--- a/simulation/index.html
+++ b/simulation/index.html
@@ -147,6 +147,8 @@
     <script src="orbitControls.js"></script>
     <script src="MTLLoader.js"></script>
     <script src="OBJLoader.js"></script>
+    <script src="convexHull.js"></script>
+    <script src="convex.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
