--- a/simulation/index.html
+++ b/simulation/index.html
@@ -132,6 +132,15 @@
         </div>
     </div>
 
+    <div id="houseData" class="fas fa-home" style="font-size: 30px; text-align: center;">
+        <div id="zones">
+            <div id="zone1"></div>
+            <div id="zone2"></div>
+            <div id="zone3"></div>
+            <div id="zone4"></div>
+            <div id="allZones"></div>
+        </div>
+    </div>
 
     <div id="mainChart">
         <canvas id="myChart"></canvas>
