--- a/simulation/index.html
+++ b/simulation/index.html
@@ -134,11 +134,11 @@
 
     <div id="houseData" class="fas fa-home" style="font-size: 30px; text-align: center;">
         <div id="zones">
-            <div id="zone1"></div>
-            <div id="zone2"></div>
-            <div id="zone3"></div>
-            <div id="zone4"></div>
-            <div id="allZones"></div>
+            <div id="zone1" onclick="showZone('1')"></div>
+            <div id="zone2" onclick="showZone('2')"></div>
+            <div id="zone3" onclick="showZone('3')"></div>
+            <div id="zone4" onclick="showZone('4')"></div>
+            <div id="allZones" onclick="showZone('5')"></div>
         </div>
     </div>
 
@@ -156,8 +156,6 @@
     <script src="orbitControls.js"></script>
     <script src="MTLLoader.js"></script>
     <script src="OBJLoader.js"></script>
-    <script src="convexHull.js"></script>
-    <script src="convex.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
