--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body >
+<body>
     <div >    
-        <p id="title" style="font-size: 50px; margin-left: 40%">City Resources</p>
-        <img src="documentation/house2.png" style="margin-left: 30%; margin-right: auto; width: 500px; height: 300px;">
-        <p id="sub" style="text-align: center;font-size: 30px;">This is a project that simulates how the production of water and<br> energy of a city changes based on rain regime.</p>
-        <a class="bt" href="documentation/index.html" style="margin-left: 40%; font-size: 20px;">Documentation</a>
-        <a class="bt" href="simulation/index.html" style="margin-left: 20px;  font-size: 20px;">Simulation</a>
+        <p id="title">City Resources</p>
+        <img id="mainImg" src="documentation/house2.png">
+        <p id="sub">This is a project that simulates how the production of water and<br> energy of a city changes based on rain regime.</p>
+        <a id="bt1" class="bt" href="documentation/index.html">Documentation</a>
+        <a id="bt2" class="bt" href="simulation/index.html">Simulation</a>
     </div>
 </body>
 </html>
